# aimara

./: .dockerignore  .gitignore  DEBUGGING_GUIDE.md  Dockerfile  LOCAL_SETUP.md  PIPELINE_ANALYSIS_REPORT.md  PIPELINE_WALKTHROUGH.md  PROJECT_BREAKDOWN.md  README.md  TRANSCRIPTION_GUIDE.md  aimara.py  debug_whisper.py  docker-compose.yml  main.py  pipeline.py  playlist_info.json  pyproject.toml  requirements.txt  start.sh
scripts/: download_audio.py  download_video.py  fetch_playlist.py  monitor_entities.py  transcribe_audio.py  transcribe_optimized.py  transcribe_with_entities.py
transcripts/: EN VIVO  Con El Mazo Dando  Diosdado Cabello  Programa 535_transcript_building.txt  EN VIVO  Con El Mazo Dando  Diosdado Cabello  Programa 536_transcript_building.txt  EN VIVO  Con El Mazo Dando  Diosdado Cabello  Programa 537_transcript_building.txt  EN VIVO  Con El Mazo Dando  Diosdado Cabello  Programa 540_transcript_building.txt  EN VIVO  Con El Mazo Dando  Diosdado Cabello  Programa 541_transcript_building.txt  entities_20251029_031037.jsonl  entities_20251029_043444.jsonl  entities_20251029_103511.jsonl  entities_summary_20251029_043444.json
transcripts/video_transcripts/: EN VIVO  Con El Mazo Dando  Diosdado Cabello  Programa 537_entities.json  EN VIVO  Con El Mazo Dando  Diosdado Cabello  Programa 537_transcript.json  EN VIVO  Con El Mazo Dando  Diosdado Cabello  Programa 537_transcript.txt  EN VIVO  Con El Mazo Dando  Diosdado Cabello  Programa 540_entities.json  EN VIVO  Con El Mazo Dando  Diosdado Cabello  Programa 540_transcript.json  EN VIVO  Con El Mazo Dando  Diosdado Cabello  Programa 540_transcript.txt  EN VIVO  Con El Mazo Dando  Diosdado Cabello  Programa 541_entities.json  EN VIVO  Con El Mazo Dando  Diosdado Cabello  Programa 541_transcript.json  EN VIVO  Con El Mazo Dando  Diosdado Cabello  Programa 541_transcript.txt
