[project]
name = "aimara"
version = "0.1.0"
description = "YouTube playlist video processing - download, transcribe, and search for keywords"
requires-python = ">=3.13"
dependencies = [
    "yt-dlp",
    "openai-whisper",
    # Note: torch and torchaudio will be pulled by whisper
    # but may have platform compatibility issues on Intel Mac
    # Consider using: pip install torch --index-url https://download.pytorch.org/whl/cpu
    "pydub",
    "regex",
    "nltk",
    "requests",
    "tqdm",
    "pyyaml",
    "python-dotenv",
    "spacy>=3.7.0",
    "click>=8.3.0",
    "torch>=2.9.0",
]
